
---

## ðŸ“ `obalapalava/pyproject.toml`

```toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "obalapalava"
version = "0.1.0"
description = "Python SDK for ObalaPalava English â†” Pidgin translation"
authors = [
  { name="WAIT Technologies" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "gradio_client>=0.8.0"
]

[project.urls]
Homepage = "https://obala-palava.vercel.app"
